--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿@page
 @model IndexModel
 @{
+
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
+    
 }
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
+    <div class="col-md-3">
+        <partial name="_ManageNav" />
+    </div>
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
