--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,32 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.username"></label>
+                <input asp-for="Input.username" class="form-control" />
+                <span asp-validation-for="Input.username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Dob"></label>
+                <input type="date" asp-for="Input.Dob" class="form-control" />
+                <span asp-validation-for="Input.Dob" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input onkeyup="this.value=this.value.replace(/[^\d]/,'')" asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
