--- a/src/KnowledgeSpace.BackendServer/Views/Shared/_RepliedCommentEmail.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Views/Shared/_RepliedCommentEmail.cshtml
@@ -374,7 +374,7 @@
                                     <tr>
                                         <td>
                                             <p>Chào @Model.RepliedName,</p>
-                                            <p>Có người đã trả lời bình luận của bạn trên @Configuration["PortalUrl"]</p>
+                                            <p>Có người đã trả lời bình luận của bạn trên knowledgeBase @Configuration["PortalUrl"]</p>
                                             <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                                                 <tbody>
                                                     <tr>
@@ -382,7 +382,7 @@
                                                             <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td> <a href="/kb/@Model.KnowledgeBaseSeoAlias-@Model.KnowledeBaseId" target="_blank">Đến bài đăng</a> </td>
+                                                                        <td> <a href="@Configuration["PortalUrl"]/kb/@Model.KnowledgeBaseSeoAlias-@Model.KnowledeBaseId" target="_blank">Đến bài đăng</a> </td>
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
@@ -390,8 +390,9 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
+                                            <h3>Nội dung bình luận: </h3>
                                             <p>@Model.CommentContent</p>
-                                            <p>Cảm ơn.</p>
+
                                         </td>
                                     </tr>
                                 </table>
