Thay đổi ngôn ngữ hiển thị identity server. chỉnh nghiệp vụ xoá user, xoá bài viết, xoá danh mục

--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,8 +1,11 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "Xác nhận thay đổi email";
 }
 
 <h1>@ViewData["Title"]</h1>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
+<p>
+    Email đã được thay đổi. Để đăng nhập vui lòng click:  <a asp-page="./Login">Đăng nhập</a>.
+</p>
