--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,22 +1,22 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Xác nhận tài khoản";
 }
 
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+    <p>
+        Ứng dụng này hiện không có người gửi email thực được đăng ký, xem <a href="https://aka.ms/aspaccountconf"> các tài liệu này </a> để biết cách định cấu hình người gửi email thực.
+        Thông thường, điều này sẽ được gửi qua email: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click vào đây để xác nhận tài khoản của bạn</a>
+    </p>
     }
     else
     {
 <p>
-        Please check your email to confirm your account.
+    Vui lòng kiểm tra email của bạn để xác nhận tài khoản của bạn.
 </p>
     }
 }
