--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Đăng xuất";
     Layout = null;
 }
 <!DOCTYPE html>
@@ -25,10 +25,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Quyền riêng tư</a>
                         </li>
                     </ul>
                 </div>
@@ -41,12 +41,12 @@
             {
                 <div class="row">
                     <div class="col-sm-6">
-                        <p>Would you like to logout of IdentityServer?</p>
+                        <p>Bạn muốn đăng xuất IdentityServer?</p>
                         <form method="post">
                             <input type="hidden" asp-for="LogoutVm.LogoutId" />
                             <fieldset>
                                 <div class="form-group">
-                                    <button class="btn btn-primary">Yes</button>
+                                    <button class="btn btn-primary">Đăng xuất</button>
                                 </div>
                             </fieldset>
                         </form>
@@ -55,11 +55,11 @@
             }
             @if (Model.LoggedOutVm != null)
             {
-                <p>You are now logged out</p>
+                <p>Bạn đã đăng xuất</p>
                 @if (Model.LoggedOutVm.PostLogoutRedirectUri != null)
                 {
                     <div>
-                        Click <a class="PostLogoutRedirectUri" href="@Model.LoggedOutVm.PostLogoutRedirectUri">here</a> to return to the
+                        Click <a class="PostLogoutRedirectUri" href="@Model.LoggedOutVm.PostLogoutRedirectUri">VÀO ĐÂY</a> để quay lại
                         <span>@Model.LoggedOutVm.ClientName</span> application.
                     </div>
                 }
@@ -73,7 +73,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - MyShop.Backend - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - MyShop.Backend - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
