--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -5,11 +5,11 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>Set your password</h4>
+<h4>Thiết lập mật khẩu</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Bạn không có tên người dùng / mật khẩu cục bộ cho trang web này. Thêm 
+    tài khoản cục bộ để bạn có thể đăng nhập mà không cần đăng nhập bên ngoài.
 </p>
 <div class="row">
     <div class="col-md-6">
@@ -25,7 +25,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Set password</button>
+            <button type="submit" class="btn btn-primary">Thiết lập mật khẩu</button>
         </form>
     </div>
 </div>
