--- a/src/KnowledgeSpace.WebPortal/Views/Home/Index.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Home/Index.cshtml
@@ -70,11 +70,9 @@
             <section class="widget">
                 <div class="quick-links-widget">
                     <h3 class="title">Liên kết</h3>
-                    <ul id="menu-quick-links" class="menu clearfix">
-                        <li><a href="https://tedu.com.vn" title="Trang chủ TEDU">TEDU</a></li>
-                        <li><a href="http://forum.tedu.com.vn" title="Diễn đàn TEDU">Diễn đàn</a></li>
-                        <li><a href="http://youtube.com/" title="Kênh Youtube TEDU">Youtube Channel</a></li>
-                        <li><a href="https://facebook.com/teduchannel" title="Facebook TEDU">Fanpage</a></li>
+                    <ul id="menu-quick-links" class="menu clearfix">      
+                        <li><a href="http://youtube.com/" title="Kênh Youtube ">Youtube </a></li>
+                        <li><a href="https://facebook.com/" title="Facebook ">Fanpage</a></li>
                     </ul>
                 </div>
             </section>
