--- a/src/KnowledgeSpace.WebPortal/Views/Shared/_SearchBar.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Shared/_SearchBar.cshtml
@@ -1,7 +1,6 @@
 ﻿<div class="search-area-wrapper">
     <div class="search-area container">
-        <h3 class="search-header">Bạn muốn tìm câu hỏi?</h3>
-        <p class="search-tag-line">Nếu bạn muốn tìm kiếm gì hãy gõ từ khóa dưới đây!</p>
+        <h3 class="search-header">Tìm kiếm bài viết</h3>
 
         <form id="search-form" class="search-form clearfix" method="get" action="/search" autocomplete="off">
             <input class="search-term required" type="text" id="txt_keyword" name="keyword"
