--- a/admin-app/src/app/protected-zone/statistics/monthly-new-comments/monthly-new-comments.component.html
+++ b/admin-app/src/app/protected-zone/statistics/monthly-new-comments/monthly-new-comments.component.html
@@ -6,7 +6,7 @@
                 <input style="width: 100%;" pInputText (keyup.enter)="loadData()" [(ngModel)]="year" type="number">
             </div>
             <div class="ui-g-6">
-                <button pButton type="button" label="Tải báo cáo" icon="fa fa-plus" (click)="loadData()"></button>
+                <button pButton type="button" label="Thống kê" (click)="loadData()"></button>
             </div>
         </p-header>
         <p-table #dt [value]="items" [metaKeySelection]="true" [resizableColumns]="true" columnResizeMode="expand" [responsive]="true" [scrollable]="true">
@@ -24,7 +24,7 @@
             <ng-template pTemplate="body" let-row>
                 <tr [pSelectableRow]="row">
                     <td>
-                        <span class="ui-column-title">Tháng</span>{{row.month}}</td>
+                        <span class="ui-column-title">Tháng: </span>{{row.month}}</td>
                     <td>
                         <span class="ui-column-title"></span>{{row.numberOfComments | number}}</td>
 
