--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -6,5 +6,6 @@
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Mật khẩu của bạn đã được thay đổi. Vui lòng <a asp-page="./Login">click vào đây để đăng nhập.</a>.
+    Mật khẩu của bạn đã được thay đổi. 
 </p>
+
