--- a/src/KnowledgeSpace.WebPortal/Views/Shared/_SearchBar.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Shared/_SearchBar.cshtml
@@ -4,7 +4,7 @@
 
         <form id="search-form" class="search-form clearfix" method="get" action="/search" autocomplete="off">
             <input class="search-term required" type="text" id="txt_keyword" name="keyword"
-                   placeholder="Nhập từ khóa" title="* Vui lòng nhập từ khóa" />
+                   placeholder="Nhập từ khóa" title="* Vui lòng nhập từ khóa( Có thể tìm theo tên tác giả, tên tiêu đề, vấn đề của bài viết)" />
             <input class="search-btn" type="submit" value="Tìm" />
             <div id="search-error-container"></div>
         </form>
