--- a/src/KnowledgeSpace.WebPortal/Views/Shared/Components/SideBar/Default.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Shared/Components/SideBar/Default.cshtml
@@ -4,7 +4,7 @@
     {
         <section class="widget">
             <div class="body-section">
-                <a class="btn btn-success new-kb" href="/new-kb" title="Đăng bài mới">Đăng bài mới</a>
+                <a class="btn new-kb" href="/new-kb" title="Đăng bài mới">Đăng bài mới</a>
             </div>
         </section>
     }
