fix validator create kb

--- a/src/KnowledgeSpace.WebPortal/Views/Account/CreateNewKnowledgeBase.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Account/CreateNewKnowledgeBase.cshtml
@@ -33,7 +33,7 @@
             Danh mục
         </div>
         <div class="span6">
-            <select asp-for="CategoryId"  class="required input-xlarge"
+            <select asp-for="CategoryId" class="required input-xlarge"
                     asp-items="ViewBag.Categories">
             </select>
             <span asp-validation-for="CategoryId" class="text-danger"></span>
@@ -42,25 +42,25 @@
         <div class="span2">
             Tiêu đề
         </div>
+        
         <div class="span6">
-            <input asp-for="Title" class="required input-xlarge" />
-            <span asp-validation-for="Title" class="text-danger"></span>
+            <textarea asp-for="Title" rows="5" id="Title" class="required span6"></textarea>
+           
         </div>
-
         <div class="span2">
             Mô tả
         </div>
         <div class="span6">
-            <textarea asp-for="Description" rows="5" class="span6"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <textarea asp-for="Description" rows="5" class="required span6"></textarea>
+            
         </div>
 
         <div class="span2">
             Môi trường
         </div>
         <div class="span6">
-            <textarea asp-for="Environment" id="txt_environment" rows="5" class="required span6"></textarea>
-            <span asp-validation-for="Environment" class="text-danger"></span>
+            <textarea asp-for="Environment" id="txt_environment" rows="5" class=" span6"></textarea>
+           
         </div>
 
         <div class="span2">
@@ -68,39 +68,38 @@
         </div>
         <div class="span6">
             <textarea asp-for="Problem" rows="5" id="txt_problem" class="required span6"></textarea>
-            <span asp-validation-for="Problem" class="text-danger"></span>
+           
         </div>
 
         <div class="span2">
             Cách tái hiện
         </div>
         <div class="span6">
-            <textarea asp-for="StepToReproduce" id="txt_step_reproduce" rows="5" class="required span6"></textarea>
-            <span asp-validation-for="StepToReproduce" class="text-danger"></span>
+            <textarea asp-for="StepToReproduce" id="txt_step_reproduce" rows="5" class=" span6"></textarea>
+          
         </div>
-
         <div class="span2">
             Thông báo lỗi
         </div>
         <div class="span6">
-            <input asp-for="ErrorMessage" class="input-xlarge" />
-            <span asp-validation-for="ErrorMessage" class="text-danger"></span>
+            <textarea asp-for="ErrorMessage" id="txt_ErrorMessage" rows="5" class=" span6"></textarea>
+            
         </div>
 
         <div class="span2">
             Cách sửa nhanh
         </div>
         <div class="span6">
-            <textarea asp-for="Workaround" id="txt_workaround" rows="5" class="required span6"></textarea>
-            <span asp-validation-for="Workaround" class="text-danger"></span>
+            <textarea asp-for="Workaround" id="txt_workaround" rows="5" class=" span6"></textarea>
+           
         </div>
 
         <div class="span2">
             Giải pháp
         </div>
         <div class="span6">
-            <textarea asp-for="Note" rows="5" id="txt_note" class="required span6"></textarea>
-            <span asp-validation-for="Note" class="text-danger"></span>
+            <textarea asp-for="Note" rows="5" id="txt_note" class=" span6"></textarea>
+           
         </div>
 
         <div class="span2">
