--- a/src/KnowledgeSpace.WebPortal/Views/Shared/Components/SideBar/Default.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Shared/Components/SideBar/Default.cshtml
@@ -3,8 +3,8 @@
     @if (User.Identity.IsAuthenticated)
     {
         <section class="widget">
-            <div class="body-section">
-                <a class="btn new-kb" href="/new-kb" title="Đăng bài mới">Đăng bài mới</a>
+            <div class="body-section" >
+                <a style="background: #3f4b55; color: #fff;" class="btn new-kb" href="/new-kb" title="Đăng bài mới">Đăng bài mới</a>
             </div>
         </section>
     }
