--- a/src/KnowledgeSpace.WebPortal/Views/Account/CreateNewKnowledgeBase.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/Account/CreateNewKnowledgeBase.cshtml
@@ -113,8 +113,9 @@
             File đính kèm
         </div>
         <div class="span6" id="attachment_items">
+            <button id="btn_add_attachment" href="#">Thêm đính kèm</button>
             <p><input type="file" name="attachments" /></p>
-            <a id="btn_add_attachment" href="#">Thêm đính kèm</a>
+
         </div>
 
         <div class="span6 offset2 bm30">
