--- a/admin-app/src/app/protected-zone/dashboard/dashboard.component.html
+++ b/admin-app/src/app/protected-zone/dashboard/dashboard.component.html
@@ -1,16 +1,16 @@
 <div [@routerTransition]>
     <h2 class="text-muted">Dashboard <small>Statistics Overview</small></h2>
-    
+
     <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'primary'" [icon]="'fa-comments'" [count]="26" [label]="'New Comments!'" ></app-stat>
+            <app-stat [bgClass]="'primary'" [icon]="'fa-comments'" [count]="26" [label]="'New Comments!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'warning'" [icon]="'fa-tasks'" [count]="12" [label]="'New task!'" ></app-stat>
+            <app-stat [bgClass]="'warning'" [icon]="'fa-tasks'" [count]="12" [label]="'New task!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'success'" [icon]="'fa-shopping-cart'" [count]="124" [label]="'New Orders!'" ></app-stat>
+            <app-stat [bgClass]="'success'" [icon]="'fa-shopping-cart'" [count]="124" [label]="'New Orders!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'danger'" [icon]="'fa-support'" [count]="13" [label]="'New Tickets!'"></app-stat>
@@ -26,7 +26,7 @@
                     <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
                 </div>
                 <!-- /.card-header -->
-                <app-timeline></app-timeline>
+                <!-- <app-timeline></app-timeline> -->
                 <!-- /.card-body -->
             </div>
             <!-- /.card -->
@@ -38,12 +38,12 @@
                     <i class="fa fa-bell fa-fw"></i> Notifications card
                 </div>
                 <!-- /.card-header -->
-                <app-notification></app-notification>
+                <!-- <app-notification></app-notification> -->
                 <!-- /.card-body -->
             </div>
             <!-- /.card -->
 
-            <app-chat></app-chat>
+            <!-- <app-chat></app-chat> -->
             <!-- /.card .chat-card -->
         </div>
         <!-- /.col-lg-4 -->
