--- a/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/KnowledgeSpace.BackendServer/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,7 @@
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             
             <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.username"></label>
                 <input asp-for="Input.username" class="form-control" />
