--- a/src/KnowledgeSpace.WebPortal/Views/KnowledgeBase/Details.cshtml
+++ b/src/KnowledgeSpace.WebPortal/Views/KnowledgeBase/Details.cshtml
@@ -169,6 +169,11 @@
             </div><!-- end of comment-body -->
             <div id="reply_comment_{{id}}"></div>
         </article><!-- end of comment -->
+    <ul class="children" id="children_comments_{{id}}">
+
+            {{{childrenHtml}}}
+        </ul>
+
     </li>
 </script>
 <script id="tmpl_comments" type="x-tmpl-mustache">
